<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="225dp"
    android:background="@drawable/winner_dialog_bg"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/textPaused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/winner_name_style"
        android:fontFamily="@font/audiowide"
        android:text="@string/game_is_paused_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/atomic_age"
        android:text="@string/do_you_want_to_quit_txt"
        android:textColor="#277da1"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPaused" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#E63946"
        android:fontFamily="@font/audiowide"
        android:text="@string/yes"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAsk" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/audiowide"
        android:text="@string/no"
        android:textColor="#00a896"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAsk"
        app:strokeColor="#00a896"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--        app:strokeColor="#00a896"-->
    <!--        app:strokeWidth="4sp"-->