<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="325dp"
    android:background="@drawable/winner_dialog_bg"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/textPaused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/winner_name_style"
        android:fontFamily="@font/audiowide"
        android:text="@string/game_paused_txt"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pref_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/prefs_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPaused">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/atomic_age"
            android:textColor="#277da1"
            android:text="@string/sound_txt"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/soundSwitch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".9"
            app:si_disabled_color="#4f646f"
            app:si_enabled="true"
            app:si_no_dash="false"
            app:si_tint_color="#277da1"
            app:srcCompat="@drawable/ic_volume" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pref_3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/prefs_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pref_2">

        <TextView
            android:id="@+id/musicText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/atomic_age"
            android:text="@string/music_txt"
            android:textSize="28sp"
            android:textColor="#277da1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.zagum.switchicon.SwitchIconView
            android:id="@+id/musicSwitch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:si_animation_duration="500"
            app:si_disabled_alpha=".9"
            app:si_disabled_color="#4f646f"
            app:si_enabled="true"
            app:si_no_dash="false"
            app:si_tint_color="#277da1"
            app:srcCompat="@drawable/ic_music" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#E63946"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_quit_txt"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_continue_txt"
        android:textColor="#00a896"
        android:textSize="20sp"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_3"
        app:strokeColor="#00a896"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--        app:strokeColor="#00a896"-->
    <!--        app:strokeWidth="4sp"-->