<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".SinglePlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/replay_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="#00000000"
            android:contentDescription="@string/replay_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_replay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="#00000000"
            android:contentDescription="@string/pause_button_txt"
            android:scaleType="fitXY"
            android:src="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/attemptsCard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="18dp"
            app:layout_constraintEnd_toStartOf="@+id/scoreCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/player1style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:background="@drawable/layout_stroke"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/attemptsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/attempts_txt"
                    android:textColor="@color/colorGreenFav"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/attempts"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/attempts"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/attempts"
                    android:textColor="@color/colorGreenFav"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/attemptsText"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scoreCard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/attemptsCard"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scoreStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_stroke"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/score_txt"
                    android:textColor="@color/colorGreenFav"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/pScore"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pScore"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/score"
                    android:textColor="@color/colorGreenFav"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/scoreText"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/singlePlayerFrag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout="@layout/fragment_single_player22" />

</androidx.constraintlayout.widget.ConstraintLayout>